Release 1.3.2 - FindBugs team
- patch 1746499: better icons (Alessandro Nistico)
- patch 1893685: Find bug actions on change sets bug (Alessandro Nistico)
- fixed bug 1855384: Bug configuration is broken in Eclipse (Andrei Loskutov)
- refactored FindBugs properties page (Andrei Loskutov)
- refactored FindBugs worker/builder/run action (Andrei Loskutov)
- FB detects now only bugs from classes on project's classpath (no double work on 
  duplicated class files) (Andrei Loskutov)
- fixed bug introduced by the bad patch for 1867951: FB cannot be executed incrementally 
  on a folder of file (Andrei Loskutov)
- fixed job rule: now jobs for different projects may run in parallel if running on a 
  multi-core PC and "fb.allowParallelBuild" system property is set to true (Andrei Loskutov)  
- fixed FB auto-build not started if .fbprefs or .classpath was changed (Andrei Loskutov)
- fixed not reporting bugs on secondary types (classes defined in java files with 
  different name) (Andrei Loskutov)


Release 1.3.1 - FindBugs team
- fixed bug 1828973: OutOfMemoryError in Eclipse, caused by ThreadLocals usage in FindBugs2 engine (Andrei Loskutov)

Release 1.3.0 - FindBugs team
- User may configure filters based on "baseline" bug instances in an xml file
- Merged "extended" preferences pane with the main preferences pane
- Include/Exclude filter-file selector now sanity-checks selection

Release 1.2.2 - major code cleanup and refactoring by Andrei Loskutov
- fixed non-Eclipse-like behavoir of view selection/activation/opening (work in progress)
- bud tree view monitors resource changes now
- refactoring of all FindBugs views
- created new icons for findbugs action and views
- created new FindBugs perspective
- fixed popup contribution for the problems view (was never functional)
- no system.out.println callls without if(DEBUG) flag
- no printStackTrace() callls without if(DEBUG) flag
- other code cleanup

Release 0.1.0 - some enhancements by Peter Friese
Notes: