@@ -373,8 +373,6 @@
 
 	<!-- Details view -->
    <extension
-		 id="de.tobject.findbugs.DetailsView"
-		 name="Bug Details View"
 		 point="org.eclipse.ui.views">
 	  <category
 			name="FindBugs"
@@ -463,5 +461,114 @@
 		 <viewShortcut id="org.eclipse.ui.views.TaskList"/>
 		 <viewShortcut id="org.eclipse.ui.views.ProgressView"/>
 	  </perspectiveExtension>
+   </extension>
+   
+   <!-- experimental code for new bug explorer view 
+   <extension
+         point="org.eclipse.ui.views">
+      <view
+         category="de.tobject.findbugs.view.findBugsCategory"
+         class="org.eclipse.ui.navigator.CommonNavigator"
+         icon="icons/treeView.png"
+         id="de.tobject.findbugs.view.bugexplorer"
+         name="Bug Explorer">
+     </view>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.navigator.navigatorContent">
+      <navigatorContent
+            activeByDefault="true"
+            contentProvider="de.tobject.findbugs.view.explorer.BugContentProvider"
+            icon="icons/buggy-tiny.png"
+            id="de.tobject.findbugs.view.explorer.BugContentProvider"
+            labelProvider="de.tobject.findbugs.view.explorer.BugLabelProvider"
+            name="Bugs"
+            priority="lowest"
+            providesSaveables="false">
+         <triggerPoints>
+                    <adapt
+                            type="org.eclipse.core.resources.IResource" >
+                    </adapt>
+            </triggerPoints>
+
+      </navigatorContent>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.navigator.viewer">
+      <viewer
+            viewerId="de.tobject.findbugs.view.bugexplorer">
+      </viewer>
+      <viewerContentBinding
+            viewerId="de.tobject.findbugs.view.bugexplorer">
+         <includes>
+            <contentExtension
+                  isRoot="true"
+                  pattern="de.tobject.findbugs.*">
+            </contentExtension>
+         </includes>
+      </viewerContentBinding>
+      <viewerActionBinding
+            viewerId="de.tobject.findbugs.view.bugexplorer">
+         <includes>
+            <actionExtension
+                  pattern="de.tobject.findbugs.*">
+            </actionExtension>
+         </includes>
+      </viewerActionBinding>
+   </extension> --> 
+   
+   <!-- decorates any resource with bug counts (has to be activated via 
+    Preferences -> general -> appearance -> label decorations)-->
+   <extension
+         point="org.eclipse.ui.decorators">
+      <decorator
+            adaptable="true"
+            class="de.tobject.findbugs.decorators.ResourceBugCountDecorator"
+            id="de.tobject.findbugs.decorators.ProjectBugCountDecorator"
+            label="Bug count decorator (Project)"
+            state="false">
+         <enablement>
+            <objectClass
+                  name="org.eclipse.core.resources.IProject">
+            </objectClass>
+         </enablement>
+         <description>
+            Decorates java projects with bug counts for all contained java classes
+         </description>
+      </decorator>
+      
+      <decorator
+            adaptable="true"
+            class="de.tobject.findbugs.decorators.ResourceBugCountDecorator"
+            id="de.tobject.findbugs.decorators.FolderBugCountDecorator"
+            label="Bug count decorator (Folder)"
+            state="false">
+         <enablement>
+            <objectClass
+                  name="org.eclipse.core.resources.IFolder">
+            </objectClass>
+         </enablement>
+         <description>
+            Decorates java related resources with bug counts for all contained java classes
+         </description>
+      </decorator>
+      
+      <decorator
+            adaptable="true"
+            class="de.tobject.findbugs.decorators.ResourceBugCountDecorator"
+            id="de.tobject.findbugs.decorators.FileBugCountDecorator"
+            label="Bug count decorator (File)"
+            state="false">
+         <enablement>
+            <objectClass
+                  name="org.eclipse.core.resources.IFile">
+            </objectClass>
+         </enablement>
+         <description>
+            Decorates java files with bug counts
+         </description>
+      </decorator>
    </extension>
 </plugin>
